--- a/01-MeanShift-Tracking.ipynb
+++ b/01-MeanShift-Tracking.ipynb
@@ -1,9 +1,18 @@
-
+{
+ "cells": [
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# MeanShift Tracking"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# link\n",
+    "https://www.bogotobogo.com/python/OpenCV_Python/python_opencv3_mean_shift_tracking_segmentation.php"
    ]
   },
   {
@@ -246,17 +255,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The functions calcBackProject() calculate the back project of the histogram. That is, similarly to calcHist(), at each location (x, y), the function collects the values from the selected channels in the input images and finds the corresponding histogram bin. But instead of incrementing it, the function reads the bin value, scales it by scale, and stores in backProject(x,y). In terms of statistics, the function computes probability of each element value in respect with the empirical probability distribution represented by the histogram."
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
@@ -400,7 +407,4 @@
  },
  "nbformat": 4,
  "nbformat_minor": 2
-}
-{
-'The functions calcBackProject() calculate the back project of the histogram.That is, similarly to calcHist(), at each location (x, y), the function collects the values from the selected channels in the input images and finds the corresponding histogram bin. But instead of incrementing it, the function reads the bin value, scales it by scale, and stores in backProject(x,y). In terms of statistics, the function computes probability of each element value in respect with the empirical probability distribution represented by the histogram.'
 }
